add new field to html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <section class="panel">YOUR WALLET: <span class="wallet"></span></section>
 
     <section class="score">
-      <span class="result"></span> Games: <span class="number"></span><br> won games: <span class="win"></span><br> lost
+      <span class="result">You won: 2$</span><br> Games: <span class="number"></span><br> won games:
+      <span class="win"></span><br> lost
       games:<span class="loss"></span>
     </section>
 
