change html to english

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
       <button id="start">Roll!</button>
     </section>
 
-    <section class="panel">YOUR WALLET: <span class="wallet"></span></section>
+    <section class="panel">YOUR WALLET:
+      <span class="wallet"></span></section>
 
     <section class="score">
-      <span class="result">You won: 2$</span><br> Games: <span class="number"></span><br> won games:
-      <span class="win"></span><br> lost
-      games:<span class="loss"></span>
+      <span class="result">You won: 2$</span><br>
+      Games: <span class="number"></span><br>
+      won games: <span class="win"></span><br>
+      lost games:<span class="loss"></span>
     </section>
 
   </div>
