--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
   </div>
-  <script src="game.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
