--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <span class="wallet"></span></section>
 
     <section class="score">
-      <span class="result">You won: 2$</span><br>
+      <span class="result"></span><br>
       Games: <span class="number"></span><br>
       won games: <span class="win"></span><br>
       lost games:<span class="loss"></span>
